[gd_scene load_steps=2 format=3 uid="uid://b5gtexi7ngrr5"]

[ext_resource type="Script" path="res://source/user_interface/score_panel.gd" id="1_vuuvx"]

[node name="score_panel" type="Panel"]
custom_minimum_size = Vector2(640, 440)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vuuvx")

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="content" type="VBoxContainer" parent="margin_container"]
layout_mode = 2

[node name="header" type="HBoxContainer" parent="margin_container/content"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="number" type="Label" parent="margin_container/content/header"]
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "#"
horizontal_alignment = 1

[node name="name" type="Label" parent="margin_container/content/header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Name"

[node name="kills" type="Label" parent="margin_container/content/header"]
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Kills"
horizontal_alignment = 1

[node name="deaths" type="Label" parent="margin_container/content/header"]
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Deaths"
horizontal_alignment = 1

[node name="score" type="Label" parent="margin_container/content/header"]
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Score"
horizontal_alignment = 1

[node name="line_break" type="ColorRect" parent="margin_container/content"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="players_scores_container" type="ScrollContainer" parent="margin_container/content"]
layout_mode = 2
size_flags_vertical = 3

[node name="players_scores" type="VBoxContainer" parent="margin_container/content/players_scores_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
